--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "setup-db": "node scripts/setup-db.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
+    "cookies-next": "^4.1.1",
+    "dotenv": "^17.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.292.0",
     "next": "14.2.31",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "pg": "^8.11.3",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cookies-next": "^4.1.1"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20",
     "@types/pg": "^8.10.9",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
-} 
+}
