--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "setup-db": "node scripts/setup-db.js"
+    "setup-db": "node scripts/setup-db.js",
+    "insert-test-animations": "node scripts/insert-test-animations.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
