--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "setup-db": "node scripts/setup-db.js",
-    "insert-test-animations": "node scripts/insert-test-animations.js"
+    "insert-test-animations": "node scripts/insert-test-animations.js",
+    "migrate-api-endpoint": "node scripts/add-api-endpoint.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
